SS-57 Fixed, Btn Registrar con mayor z-index y checkbox de color negro

--- a/public/css/style.bundle.css
+++ b/public/css/style.bundle.css
@@ -2778,8 +2778,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #1b84ff;
-    border-color: #1b84ff
+    background-color: #1f1f1f;
+    border-color: #1f1f1f;
 }
 
 .form-check-input:checked[type=checkbox] {
